[1.4.1]
- API Addition: added possibility to scan pending telegrams, so they can be saved and subsequently restored on game loading, see https://github.com/libgdx/gdx-ai/wiki/Message-Handling#saving-and-restoring-pending-messages
- API Addition: added pathfinding and path smoothing, see https://github.com/libgdx/gdx-ai/wiki/Pathfinding
- API Addition: added scheduling API supporting task time slicing over several frames, see https://github.com/libgdx/gdx-ai/wiki/Scheduling
- API Change: moved raycast classes to the common package com.badlogic.gdx.ai.utils
- API Addition: added collides method tho RaycastCollisionDetector.
- API Change: now Ray has start and end points instead of an origin and a direction.

[1.4.0]
- API Addition: added behaviors trees (thanks implicit-invocation), see https://github.com/libgdx/gdx-ai/wiki/Behavior-Trees
- API Addition: added steering behaviors, see https://github.com/libgdx/gdx-ai/wiki/Steering-Behaviors
- API Addition: added support for telegram providers, see https://github.com/libgdx/gdx-ai/wiki/Message-Handling#telegram-providers
- API Change: MessageDispatcher's dispatchDelayedMessages renamed to update which now takes deltaTime as input to properly support game pause; removed time granularity.
- API Change: renamed Agent to Telegraph and moved it to msg package. Also, removed the update method.
- API Addition: now StateMachine implements Telegraph.