@@ -22,7 +22,7 @@ import com.badlogic.gdx.ai.tests.btree.BehaviorTreeTestBase;
 import com.badlogic.gdx.ai.tests.btree.tests.IncludeSubtreeTest;
 import com.badlogic.gdx.ai.tests.btree.tests.ParseAndRunTest;
 import com.badlogic.gdx.ai.tests.btree.tests.ParseCloneAndRunTest;
-import com.badlogic.gdx.ai.tests.btree.tests.ProgramaticallyCreatedTest;
+import com.badlogic.gdx.ai.tests.btree.tests.ProgrammaticallyCreatedTest;
 import com.badlogic.gdx.ai.tests.utils.GdxAiTest;
 import com.badlogic.gdx.ai.tests.utils.scene2d.CollapsableWindow;
 import com.badlogic.gdx.graphics.GL20;
@@ -59,8 +59,8 @@ public class BehaviorTreeTests extends GdxAiTest {
 		new ParseCloneAndRunTest(this),
 		new IncludeSubtreeTest(this, false),
 		new IncludeSubtreeTest(this, true),
-		new ProgramaticallyCreatedTest(this, false),
-		new ProgramaticallyCreatedTest(this, true)
+		new ProgrammaticallyCreatedTest(this, false),
+		new ProgrammaticallyCreatedTest(this, true)
 	};
 	// @on - enable libgdx formatter
 
