@@ -37,25 +37,25 @@ import com.badlogic.gdx.ai.tests.btree.dog.RestTask;
 import com.badlogic.gdx.ai.tests.btree.dog.WalkTask;
 import com.badlogic.gdx.scenes.scene2d.ui.Table;
 
-/** A simple test to demonstrate subtree inclusion both eager (at clone-time) and lazy (non run-time) 
- * for programatically created behaviors.
+/** A simple test to demonstrate subtree inclusion both eager (at clone-time) and lazy (at run-time) for programmatically created
+ * behaviors.
  * 
  * @author davebaol */
-public class ProgramaticallyCreatedTest extends BehaviorTreeTestBase {
+public class ProgrammaticallyCreatedTest extends BehaviorTreeTestBase {
 
 	private BehaviorTree<Dog> dogBehaviorTree;
 	private float elapsedTime;
 	private boolean lazy;
 
-	public ProgramaticallyCreatedTest (BehaviorTreeTests container, boolean lazy) {
-		super(container, "Programatically Created Tree" + (lazy ? " (lazy)" : ""));
+	public ProgrammaticallyCreatedTest (BehaviorTreeTests container, boolean lazy) {
+		super(container, "Programmatically Created Tree" + (lazy ? " (lazy)" : ""));
 		this.lazy = lazy;
 	}
 
 	@Override
 	public void create (Table table) {
 		elapsedTime = 0;
-		
+
 		BehaviorTreeLibraryManager libraryManager = BehaviorTreeLibraryManager.getInstance();
 		BehaviorTreeLibrary library = new BehaviorTreeLibrary(BehaviorTreeParser.DEBUG_HIGH);
 		registerDogBehavior(library);
@@ -63,39 +63,39 @@ public class ProgramaticallyCreatedTest extends BehaviorTreeTestBase {
 		dogBehaviorTree = libraryManager.createBehaviorTree("dog", new Dog("Buddy"));
 	}
 
-	private void registerDogBehavior(BehaviorTreeLibrary library) {
-		
+	private void registerDogBehavior (BehaviorTreeLibrary library) {
+
 		Include<Dog> include = new Include<Dog>();
 		include.lazy = lazy;
 		include.subtree = "dog.actual";
 		BehaviorTree<Dog> includeBehavior = new BehaviorTree<Dog>(include);
 		library.registerArchetypeTree("dog", includeBehavior);
-		
+
 		BehaviorTree<Dog> actualBehavior = new BehaviorTree<Dog>(createDogBehavior());
 		library.registerArchetypeTree("dog.actual", actualBehavior);
 	}
 
-	public static Task<Dog> createDogBehavior() {
+	public static Task<Dog> createDogBehavior () {
 		Selector<Dog> selector = new Selector<Dog>();
-		
+
 		Parallel<Dog> parallel = new Parallel<Dog>();
 		selector.addChild(parallel);
-		
+
 		CareTask care = new CareTask();
 		care.urgentProb = 0.8f;
 		parallel.addChild(care);
 		parallel.addChild(new AlwaysFail<Dog>(new RestTask()));
-		
+
 		Sequence<Dog> sequence = new Sequence<Dog>();
 		selector.addChild(sequence);
-		
+
 		BarkTask bark1 = new BarkTask();
 		bark1.times = 2;
-		sequence.addChild(bark1);		
+		sequence.addChild(bark1);
 		sequence.addChild(new WalkTask());
 		sequence.addChild(new BarkTask());
 		sequence.addChild(new MarkTask());
-		
+
 		return selector;
 	}
 
